Working version of Javafoil

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Java Development",
-	"dockerComposeFile": ["../docker-compose.yaml"],
+	"dockerComposeFile": ["../docker/docker-compose.yaml"],
     "service": "javafoil",
     "workspaceFolder": "/workspace",
     "shutdownAction": "stopCompose",
