--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -3,10 +3,20 @@ on:
   push:
     branches:
       - 'main'
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
-    name: 'Build and Push to ACR'
+    name: 'Build and Push to Container Registries'
     runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      packages: write
+      contents: read
+      attestations: write
 
     defaults:
       run:
@@ -23,10 +33,48 @@ jobs:
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ secrets.DOCKER_NAMESPACE }}/${{ secrets.DOCKER_REPOSITORY }}
+            ghcr.io/${{ github.repository }}
+            ${{ secrets.AZURE_URL }}/engineering/airfoil-tools
+          tags: |
+            type=ref,event=branch
+            type=sha
+            # set latest tag for default branch
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Build and Push to ACR
         uses: docker/build-push-action@v2
+        id: push
         with:
           push: true
           context: .
-          tags: ${{ secrets.AZURE_URL }}/adsee/javafoil:${{ github.sha }}, ${{ secrets.AZURE_URL }}/adsee/javafoil:latest
           file: docker/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      # - name: Generate artifact attestation
+      #   uses: actions/attest-build-provenance@v2
+      #   id: attest
+      #   with:
+      #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+      #     subject-digest: ${{ steps.push.outputs.digest }}
+      #     push-to-registry: true
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
