--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -34,13 +34,13 @@ jobs:
           password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@@v3
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Log in to the Container registry
-        uses: docker/login-action@@v3
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -60,12 +60,27 @@ jobs:
             # set latest tag for default branch
             type=raw,value=latest,enable={{is_default_branch}}
 
+      - name: Set up Docker
+        uses: docker/setup-docker-action@v4
+        with:
+          daemon-config: |
+            {
+              "debug": true,
+              "features": {
+                "containerd-snapshotter": true
+              }
+            }  
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Build and Push to ACR
         uses: docker/build-push-action@v2
         id: push
         with:
           push: true
           context: .
+          platforms: "linux/arm64,linux/amd64"
           file: docker/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
