--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -27,7 +27,7 @@ jobs:
     permissions:
       id-token: write
       packages: write
-      contents: read
+      contents: write
       attestations: write
 
     defaults:
@@ -160,27 +160,11 @@ jobs:
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.GITHUB_REPO }}@sha256:%s ' *)       
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.AZURE_REPO }}@sha256:%s ' *)      
+            $(printf '${{ env.AZURE_REPO }}@sha256:%s ' *)
 
       - name: Inspect image
         run: |
           docker buildx imagetools inspect ${{ env.DOCKER_REPO }}:${{ steps.meta.outputs.version }}
           docker buildx imagetools inspect ${{ env.GITHUB_REPO }}:${{ steps.meta.outputs.version }} 
           docker buildx imagetools inspect ${{ env.AZURE_REPO }}:${{ steps.meta.outputs.version }} 
-
-
-
-
-
-
-
-
-
-      # - name: Generate artifact attestation
-      #   uses: actions/attest-build-provenance@v2
-      #   id: attest
-      #   with:
-      #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-      #     subject-digest: ${{ steps.push.outputs.digest }}
-      #     push-to-registry: true
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+          
